# deepseek-ocr-2-interpretability-research

./: .gitignore  AGENTS.md  EXPERIMENT_PLAN.md  LICENSE.txt  Makefile  PLAN.md  README.md  TODO.md  pyproject.toml  requirements.txt
.githooks/: pre-commit
configs/: capture.yaml  infer.yaml  patching.yaml
data/: README.md
docs/: API.md  ARCHITECTURE.md  ATTENTION_ANALYSIS.md  MECH_INTERP_TESTS.md  OMNIDOCBENCH.md  RESEARCH_AUDIT.md  SPARSE_AUTO_ENCODER.md  STRUCTURE.md  VISUALIZATION.md
input/: DATA.md
journel/: 2026-05-11_session.md
logs/: 20260511_101826_omnidocbench_activation_survey_fixed.md
logs/journel/: 2026-05-11_session.md
paper/: macros.tex  main.tex  refs.bib
scripts/: build_paper_pdf.sh  capture_activations.py  check_omnidocbench_outputs.py  download_omnidocbench.py  export_tables.py  extract_attention.py  extract_features.py  infer_batch.py  infer_one.py  inspect_modules.py  inspect_omnidocbench_activation_survey.py  make_figures.py  research_causal_tokens.py  run_deepseek_ocr_v1_omnidocbench.py  run_interventions.py  run_omnidocbench.py  run_omnidocbench_activation_survey.py  run_patching.py  run_query_trace_mask_ablation.py  run_real_circuit_mapping.py  run_real_doc_ordering.py  run_sae_feature_ablation.py  simple_inference.py  smoke_test.py  train_sae.py
src/: __init__.py  config.py
src/analysis/: __init__.py  attention_analysis.py  circuits.py  feature_extractor.py  interventions.py  projector_analysis.py  query_analysis.py  (+4 more)
tests/: inspect_interp_outputs.py  test_attention.py  test_circuits.py  test_interpretability_e2e.py  test_interventions.py  test_models.py  test_omnidocbench.py  test_pipeline.py  test_projector_analysis.py  test_query_analysis.py  test_real_circuit_mapping.py  test_sparse_autoencoder.py  test_spatial_analysis.py  test_view_analysis.py
(+32 files in other folders)
