[project]
name = "ocr2interp"
version = "0.1.0"
description = "DeepSeek-OCR2 inference and interpretability tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate",
    "addict>=2.4.0",
    "easydict>=1.13",
    "editdistance",
    "einops",
    "hydra-core",
    "img2pdf>=0.6.3",
    "matplotlib",
    "numpy",
    "omegaconf",
    "opencv-python",
    "pandas",
    "pillow",
    "pymupdf>=1.27.2.3",
    "requests>=2.33.1",
    "rich",
    "safetensors",
    "tokenizers==0.20.3",
    "torch",
    "torchaudio",
    "torchvision",
    "tqdm",
    "transformers==4.46.3",
]

[dependency-groups]
dev = [
    "ipykernel",
    "pre-commit",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
